<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainRegistrarCuenta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_weight="0.6">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:background="@drawable/pizza" />
            </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/text_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="8dp"
                        android:layout_marginTop="8dp"
                        android:text="REGISTRAR NUEVA CUENTA"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        app:boxStrokeColor="#0000FF"
                        app:boxStrokeWidth="2dp"
                        app:helperTextEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:hintTextColor="@color/black">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lbRCorreo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        android:layout_marginTop="@dimen/edittext_margin_createAccount"
                        app:boxStrokeColor="#0000FF"
                        app:boxStrokeWidth="2dp"
                        app:helperTextEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lbRNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        app:boxStrokeColor="#0000FF"
                        app:boxStrokeWidth="2dp"
                        app:helperTextEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="20"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lbRUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_user" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        app:boxStrokeColor="#0000FF"
                        app:boxStrokeWidth="2dp"
                        app:helperTextEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lbRPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        app:boxStrokeColor="#0000FF"
                        app:boxStrokeWidth="2dp"
                        app:helperTextEnabled="true"
                        app:counterEnabled="true"
                        app:counterMaxLength="30"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lbRConfirmarPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_confirm_password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/joinUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="RegistrarCuenta"
                        android:text="@string/text_button_createAccount"
                        android:theme="@style/RaisedButtonDark"
                        app:backgroundTint="@color/red" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/dontHaveAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="¿Ya tienes una cuenta?"
                            android:textColor="@color/editTextColorBlack"
                            android:textSize="@dimen/textsize_dontHaveAccount"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/createHere"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/dontHaveAccount"
                            android:minHeight="48dp"

                            android:onClick="IrInicioSesion"
                            android:text="Iniciar Sesión"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/textsize_dontHaveAccount"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>